--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css\main.css">
        <link rel="shotrcut icon" href="css/fffff.jpg">                           
-    <title>Document</title>
+    <title>binhe</title>
 </head>
 <body> 
     <main>
